--- a/css/style.css
+++ b/css/style.css
@@ -95,6 +95,7 @@ h4 {
 h4 .red {
     color: var(--th-color-1);
 }
+
 .red {
     color: var(--th-color-1);
 }
@@ -200,9 +201,11 @@ main {
     background-color: var(--th-color-1);
     color: var(--th-color-3);
 }
-.nm-item{
+
+.nm-item {
     padding: 5px;
 }
+
 .nm-item .nm-link {
     width: 100px;
     text-align: center;
@@ -218,7 +221,8 @@ main {
     /* padding: 10px; */
     transition: all .5s;
 }
-.nm-item .nm-link::after{
+
+.nm-item .nm-link::after {
     content: ' ';
     width: 0%;
     height: 2px;
@@ -228,12 +232,15 @@ main {
     left: 0;
     transition: all .5s;
 }
-.nm-item .nm-link:hover:after{
+
+.nm-item .nm-link:hover:after {
     width: 100%;
 }
-.nm-item.active .nm-link::after{
+
+.nm-item.active .nm-link::after {
     width: 100%;
 }
+
 .nm-circle {
     width: 10px;
     height: 10px;
@@ -249,6 +256,7 @@ main {
 .nm-item.active .nm-link {
     color: var(--th-color-1) !important;
 }
+
 /* 
 .nm-item.active:nth-child(1)~.nm-circle {
     left: 50px;
@@ -293,6 +301,7 @@ main {
 .nav-menu .nm-link:hover {
     color: var(--th-color-1);
 }
+
 /* .header-close{
     position: absolute;
     top: 0;
@@ -417,14 +426,17 @@ font-size: var(--th-h4-fs);
 .project-box .pro-left .pro-b-text {
     /* max-width: 450px; */
 }
-.pro-b-img{
+
+.pro-b-img {
     height: 100%;
 }
-.pro-b-img img{
+
+.pro-b-img img {
     width: 100%;
     height: 100%;
     object-fit: cover;
 }
+
 .project-box .pro-left.pro-type-2 .pro-b-text {
     /* max-width: 450px; */
     /* margin-left: auto; */
@@ -911,11 +923,13 @@ font-size: var(--th-h4-fs);
 .work-box:hover .wb-text p {
     height: 155px;
 }
+
 @media screen and (max-width: 1380px) {
     .work-box:hover .wb-text p {
         height: 190px;
     }
 }
+
 @media screen and (max-width: 1120px) {
     .work-box:hover .wb-text p {
         height: 220px;
@@ -1088,9 +1102,10 @@ font-size: var(--th-h4-fs);
     padding: 80px 0px;
 }
 
-.opening-head  {
+.opening-head {
     padding: 0px 30px;
 }
+
 .opening-head h5 {
     color: var(--th-color-5);
     font-size: var(--th-p1);
@@ -1532,9 +1547,11 @@ font-size: var(--th-h4-fs);
     padding-bottom: 0px;
     border-left: 1px solid var(--th-color-2);
 }
-.hb-left{
+
+.hb-left {
     height: 100%;
 }
+
 .hb-right {
     background-color: var(--th-color-1);
     padding: 30px;
@@ -1637,6 +1654,10 @@ font-size: var(--th-h4-fs);
     padding: 20px;
 }
 
+/* #home-page .ous-box {
+    align-items: center;
+} */
+
 .ous-left h6 {
     color: var(--th-color-2);
     font-family: var(--th-font-1);
@@ -1646,6 +1667,27 @@ font-size: var(--th-h4-fs);
     letter-spacing: 1px;
 }
 
+.ous-right {
+    width: 100%;
+    display: flex;
+    justify-content: space-between;
+    align-items: end;
+    gap: 10px;
+}
+
+.ous-right-btn {
+    width: 170px !important;
+    opacity: 0;
+    transition: all .5s;
+}
+
+.ous-right-btn .btn-text {
+    width: 170px !important;
+}
+
+#home-page .ous-box:hover .ous-right-btn{
+    opacity: 1;
+}
 .ous-right h2 {
     color: var(--th-color-2);
     font-family: var(--th-font-2);
@@ -1715,11 +1757,11 @@ font-size: var(--th-h4-fs);
 
 .ouw-text {
     width: 100%;
-    background-color:rgba(255, 255, 255, 0.6);
+    background-color: rgba(255, 255, 255, 0.6);
     /* background-image: linear-gradient(45deg, rgba(0, 0, 0, 0.7) 0%, rgba(85, 85, 85, 0.7) 99%, rgba(205, 205, 205, 0.7) 100%); */
     /* background-image: linear-gradient(180deg, rgba(0, 0, 0, 0.7) 0%, rgba(0, 0, 0, 0.00) 46.46%); */
     position: absolute;
-    bottom:0;
+    bottom: 0;
     left: 0;
     padding: 15px;
     display: flex;
@@ -1729,7 +1771,7 @@ font-size: var(--th-h4-fs);
     transition: all .5s;
 }
 
-.ouw-text .ouw-logo img{
+.ouw-text .ouw-logo img {
     max-width: 150px;
     max-height: 150px;
 }
@@ -1837,13 +1879,16 @@ font-size: var(--th-h4-fs);
     align-items: center;
     /*transition: all .5s;*/
 }
-.test-logo{
+
+.test-logo {
     width: 100%;
     max-width: 200px;
 }
-.test-logo img{
+
+.test-logo img {
     width: 100%;
 }
+
 .tes-box.open {
     width: 60% !important;
 }
@@ -1897,9 +1942,11 @@ font-size: var(--th-h4-fs);
     max-width: 70%;
     text-align: center;
 }
-.test-q{
+
+.test-q {
     max-width: 70px;
 }
+
 .test-q img {
     width: 100%;
 }
@@ -1970,6 +2017,7 @@ font-size: var(--th-h4-fs);
 .about-hero .abh-marqee-text h1 .red {
     color: var(--th-color-1);
 }
+
 .about-hero .marquee-container {
     overflow: hidden;
     white-space: nowrap;
@@ -1981,7 +2029,7 @@ font-size: var(--th-h4-fs);
 
 .about-hero .marquee-content {
     display: inline-block;
-/*     padding-left: 100%; */
+    /*     padding-left: 100%; */
     animation: marquee 50s linear infinite;
 }
 
@@ -1994,6 +2042,7 @@ font-size: var(--th-h4-fs);
     from {
         transform: translateX(0);
     }
+
     to {
         transform: translateX(-100%);
     }
@@ -2095,9 +2144,11 @@ font-size: var(--th-h4-fs);
 .partner {
     padding: 150px 0px 80px 0px;
 }
-.partner .row{
+
+.partner .row {
     margin-top: 50px !important;
 }
+
 .partner-slider {
     margin-top: 50px;
 }
@@ -2124,19 +2175,23 @@ font-size: var(--th-h4-fs);
     position: relative;
     padding-bottom: 20px;
 }
-.par-img{
+
+.par-img {
     padding: 20px;
     border-radius: 20px;
     transition: all .5s;
 }
-.par-img img{
+
+.par-img img {
     filter: grayscale(1);
     transition: all .5s;
 }
-.par-img:hover{
+
+.par-img:hover {
     box-shadow: rgba(17, 12, 46, 0.15) 0px 48px 100px 0px;
 }
-.par-img:hover img{
+
+.par-img:hover img {
     filter: grayscale(0);
 }
 
@@ -2209,7 +2264,8 @@ font-size: var(--th-h4-fs);
     position: relative;
     transition: all .5s;
 }
-.oub-box img{
+
+.oub-box img {
     max-width: 85px;
     margin: auto;
 }
@@ -2375,9 +2431,11 @@ font-size: var(--th-h4-fs);
 .case-visual-identity {
     padding: 100px 0px 50px 0px;
 }
+
 .dr-mps-col .case-visual-identity {
-    padding-top:  0px;
+    padding-top: 0px;
 }
+
 .case-visual-identity .cavi-img {
     width: 100%;
     max-width: 80px;
@@ -2390,6 +2448,7 @@ font-size: var(--th-h4-fs);
 .case-study-website {
     padding: 80px 0px;
 }
+
 .dr-mps-col .case-study-website {
     padding-top: 0px;
 }
@@ -2411,11 +2470,13 @@ font-size: var(--th-h4-fs);
 .case-study-project {
     padding: 80px 0px 40px 0px;
 }
-.casw-v-1 img{
-width: 100%;
-height: 100%;
-object-fit: cover;
+
+.casw-v-1 img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
 }
+
 /* ------------- Case Hero Section End ------------- */
 
 
@@ -2626,7 +2687,8 @@ object-fit: cover;
 .ssh-img-box {
     margin-bottom: 50px;
 }
-.ssh-img-box img{
+
+.ssh-img-box img {
     width: 100%;
 }
 
