--- a/css/style.css
+++ b/css/style.css
@@ -1669,7 +1669,7 @@ font-size: var(--th-h4-fs);
 
 .ous-right {
     width: 100%;
-    display: flex;
+    /* display: flex; */
     justify-content: space-between;
     align-items: end;
     gap: 10px;
