--- a/css/responsive.css
+++ b/css/responsive.css
@@ -26,9 +26,7 @@
         padding: 20px 20px;
     }
 
-    .ouw-box {
-        height: 600px;
-    }
+    
 
     .wead-box .wead-text {
         padding: 20px;
@@ -293,10 +291,6 @@
         line-height: 1.2;
     }
 
-    /* .ouw-box:hover {
-        padding: 30px;
-    } */
-
     .tes-box.open {
         width: 80% !important;
     }
@@ -344,12 +338,6 @@
     .case-visual-identity .cavi-img {
         max-width: 70px;
     }
-
-    .ouw-text {
-        gap: 15px;
-        flex-direction: column;
-        align-items: start;
-    }
 }
 
 
@@ -391,9 +379,6 @@
     .ous-right-btn {
         opacity: 1;
     }
-    .ouw-box {
-        height: auto;
-    }
 
     .tes-box .test-content {
         min-width: 400px;
@@ -408,7 +393,7 @@
         padding: 10px;
     }
 
-    .ouw-text {
+    /* .ouw-text {
         padding: 18px;
         position: relative;
         opacity: 1;
@@ -421,7 +406,7 @@
     .ouw-box:hover .ouw-img img {
         height: 400px;
         filter: grayscale(0);
-    }
+    } */
 
     .about-hero .abh-marqee-text h1 {
         font-size: var(--th-h1-fs);
@@ -533,6 +518,13 @@
     .opening-box:hover .th-arrow-btn .btn-text {
         color: var(--th-color-3);
     }
+    .ouw-img img {
+        width: 100%;
+        height: 400px;
+        object-fit: cover;
+        filter: grayscale(50);
+        transition: all .5s;
+    }
 }
 
 
@@ -541,7 +533,7 @@
 @media screen and (max-width: 576px) {
     :root {
         --th-h1-fs: calc(120px*.55);
-        --th-h2-fs: calc(64px*.55);
+        --th-h2-fs: calc(48px*.55);
         --th-h4-fs: calc(32px*.6);
     }
 
