--- a/css/style.css
+++ b/css/style.css
@@ -1723,9 +1723,8 @@ font-size: var(--th-h4-fs);
 }
 
 .ouw-box {
-    height: 590px;
+    height: 100%;
     box-shadow: 0px 0px 0px 1px var(--th-color-2) inset;
-    margin-bottom: 40px;
     position: relative;
     overflow: hidden;
     transition: all .5s;
@@ -1758,16 +1757,7 @@ font-size: var(--th-h4-fs);
 .ouw-text {
     width: 100%;
     background-color: rgba(255, 255, 255, 0.6);
-    /* background-image: linear-gradient(45deg, rgba(0, 0, 0, 0.7) 0%, rgba(85, 85, 85, 0.7) 99%, rgba(205, 205, 205, 0.7) 100%); */
-    /* background-image: linear-gradient(180deg, rgba(0, 0, 0, 0.7) 0%, rgba(0, 0, 0, 0.00) 46.46%); */
-    position: absolute;
-    bottom: 0;
-    left: 0;
     padding: 15px;
-    display: flex;
-    gap: 10px;
-    align-items: center;
-    opacity: 0;
     transition: all .5s;
 }
 
@@ -1777,10 +1767,9 @@ font-size: var(--th-h4-fs);
 }
 
 .ouw-text p {
-    color: var(--th-color-3);
+    color: var(--th-color-2);
     font-family: var(--th-font-2);
     font-size: var(--th-p-fs);
-    margin: 0;
     font-style: normal;
     font-weight: 500;
     line-height: 112.5%;
